--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="google-site-verification" content="KiecK0WLRwp3hq5747uu8qO508y8jf-XwwhvsduDHI0" />
+  <meta name="google-site-verification" content="cOwi5z8kYdOZRZR6kH6FfCZmyCE5J3CWh8bOxng-P4g" />
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/berliz-favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/berliz-favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./assets/berliz-favicon/favicon-16x16.png">
