--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/berliz-favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./assets/berliz-favicon/favicon-16x16.png">
   <link rel="manifest" href="./assets/berliz-favicon/site.webmanifest">
+  <link rel="canonical" href="https://berliz.fitness/">
 </head>
 
 <body>
